Fix text-alignment issue and dates.

--- a/scss/uanextgame.scss
+++ b/scss/uanextgame.scss
@@ -62,6 +62,7 @@ h1, h2, h3, h4, h5, h6, span, p {
     margin-top: 1px;
   }
   .col-right .row {
+    -webkit-justify-content: flex-end;
     justify-content: flex-end;
     padding: 0;
   }
